--- a/layout.css
+++ b/layout.css
@@ -19,7 +19,7 @@ a {
   clear: both;
 }
 .container {
-  width: 1200px;
+  width:1200px;
   margin: auto;
 }
 
@@ -55,7 +55,7 @@ a {
   position: relative;
 }
 .slider img {
-  height: 600px;
+  height: 455px;
   width: 100%;
   position: relative;
 }
@@ -74,7 +74,7 @@ a {
   display: block;
   height: 10px;
   width: 10px;
-  margin: 5px;
+  margin: 32px 7px;
   cursor: pointer;
   border: 0;
   outline: none;
@@ -324,7 +324,7 @@ a {
   font-size: 18px;
 }
 .Medical-Specialists h5 {
-  padding-top: 5p;
+  padding-top: 5px 0 0;
   color: #000;
 }
 /* clients */
@@ -445,6 +445,7 @@ a {
   width: 570px;
   border-bottom: 1px solid #000;
   padding: 10px;
+  margin-bottom: 10px;
 }
 .appoiment-button {
   background-color: #16b0c8;
@@ -667,17 +668,28 @@ li:hover a {
     height: 30px;
   }
   .slider {
-    padding: 89px 50px;
+    padding:0px;
   }
   .slider h1 {
     margin-top: 5px;
-    font-size: 43px;
+    font-size: 40px;
     line-height: 66px;
+    text-align: center;
   }
   .slider h3 {
     text-align: center;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 27px;
+  }
+  .slider-button{
+    margin-top: 0px;
+  }
+  .slider img{
+    height: 310px;
+  }
+  li{
+    width: 0;
+    border: none;
   }
   .slider-btn {
     display: flex;
@@ -686,10 +698,11 @@ li:hover a {
     padding: 18px 25px;
   }
   .slider p {
-    font-size: 16px;
+    font-size: 12px;
     line-height: 22px;
     width: 100%;
     margin-top: 10px;
+    text-align: center;
   }
   .professionals ul {
     white-space: nowrap;
