--- a/layout.css
+++ b/layout.css
@@ -19,7 +19,7 @@ a {
   clear: both;
 }
 .container {
-  width:1200px;
+  width: 1200px;
   margin: auto;
 }
 
@@ -66,7 +66,7 @@ a {
   top: 200px;
 }
 .button__bar li button:hover {
-  background: #e40000;
+  background: #16b0c8;
 }
 .button__bar li button {
   font-size: 0;
@@ -568,7 +568,6 @@ a {
 .mobile-menu {
   display: none;
 }
-
 @media screen and (max-width: 767px) {
   .container {
     width: 100%;
@@ -668,7 +667,7 @@ li:hover a {
     height: 30px;
   }
   .slider {
-    padding:0px;
+    padding: 0px;
   }
   .slider h1 {
     margin-top: 5px;
@@ -681,13 +680,13 @@ li:hover a {
     font-size: 16px;
     line-height: 27px;
   }
-  .slider-button{
+  .slider-button {
     margin-top: 0px;
   }
-  .slider img{
+  .slider img {
     height: 310px;
   }
-  li{
+  li {
     width: 0;
     border: none;
   }
@@ -866,11 +865,12 @@ li:hover a {
     display: block;
   }
   .Latest-News li {
-    width: 70%;
+    width: 100%;
     margin: 10px 2px 10px 10px;
     display: inline-block;
     white-space: normal;
     cursor: pointer;
+    padding: 0;
   }
   .Latest-News li:last-child {
     margin-right: 15px;
@@ -903,6 +903,7 @@ li:hover a {
     padding: 5px 9px 5px 9px;
     font-size: 13px;
     line-height: 19px;
+    width: 85%;
   }
 
   .appoiment {
@@ -982,7 +983,14 @@ li:hover a {
   .Contact-Us a {
     font-size: 14px;
   }
-  .footer-icon {
+  .footer-icon ul {
     display: none;
   }
+  .footer-detail ul{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
 }
+
